a_udemy/course2/03-scheduling/pod-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myadd-pod
spec:
  containers:
  - name: data-processor
    image: data-processor
  nodeSelector:
    size: large
